# estadistic

./: .gitignore  README.md  config.py  pyproject.toml
Types/: __init__.py
database/: __init__.py  client.py  factory.py  manager.py
database/clients/: __init__.py  supabase_client.py
desc/: __init__.py  analisys_tic.py  frecuence.py  solow.py  tic_investigation.py
formula/: Demostracion.md  finite.md  formulas.md  medidas_de_tendencia_central.md  muestra_finita.md  sturges_rule.md
formula/Estadistica y probabilidad/: Clase 2 de octubre.R  Clase 27 de noviembre.md  Clase 4 de octubre.md  Demostracion regla de Sturgess.md  RefresionLineal.md  Tamaño de muestra con población finita.md
formula/Matematica/: Resolución examen UII.md  ejercicios_1.md
mock/: __init__.py  alhyndatos.csv  cuestionario_completo.csv  respuestas_cuestionario.csv  respuestas_cuestionario.xlsx
notebooks/: Análisis_descriptivo.ipynb  Estadística_descriptíva.ipynb  Resolución_2_a.ipynb  clase_27.ipynb  examen_g1.ipynb  examen_g2.ipynb  tic_investigacion.ipynb
practice/design_patterns/: factory_pattern.py  singleton_pattern.py  strategy_pattern.py  template_pattern.py
prompts/: papper.py
public/: app.py
tests/: __init__.py
