[tool.poetry]
name = "desc"
version = "0.1.0"
description = ""
authors = ["antony <antony.leo12agosto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
numpy = "^2.1.1"
seaborn = "^0.13.2"
streamlit = "^1.38.0"
scipy = "^1.14.1"
supabase = "^2.9.0"
python-dotenv = "^1.0.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "desc:main"
dev = "streamlit run public/app.py"